--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						</br>
 
 						</div>
-						<a href="#" class="image featured"><img src="images/about-me.png" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/about-me.jpg" alt="" /></a>
 
 					</section>
 
