--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 							<strong>
 								<p> my work at a quick glance,
 								based on Articulate Storyline. <br />
-									made for designing a winning and engaging learning units.</p>
+
+								goal: designing a winning and engaging learning units.</p>
 
 							</strong>
 
-							
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
