--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<br>
 
 								<p>
-									<a href="#portfolio" class="button scrolly">Click here</a>
+									<a href="#portfolio" class="button scrolly">=></a>
 								</p>
 
 
@@ -97,12 +97,12 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://register-me.azurewebsites.net/" class="image fit"><img src="images/guyk.png" alt="Registration for hobbies" /></a>
+										<a href="" class="image fit"><img src="images/guyk.png" alt="Guide by screen shots" /></a>
 										<header>
-											<h3>Hobby Management System.(HMS)</h3>
+											<h3>Storyline Screen Captures</h3>
 										</header>
 
-										<a href="https://register-me.azurewebsites.net/entrance.html" class="image fit">Editor</a>
+										<a href="" class="image fit">Captures</a>
 
 
 									</article>
