--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<br>
 
 								<p>
-									<a href="#portfolio" class="button scrolly">=></a>
+									<a href="#portfolio" class="slide-object-button-text"></a>
 								</p>
 
 
