--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt"><strong> Welcome to my Portfolio.  </strong>
+								<h2 class="alt"><strong><a href="#portfolio">Welcome to my Portfolio. </a> </strong>
 
 									<br />
 
@@ -65,9 +65,8 @@
 
 								
 								<br>
-
 								<p>
-									<a href="#portfolio" class="slide-object-button-text"></a>
+
 								</p>
 
 
@@ -83,7 +82,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>storyline examples</h2>
 							</header>
 
 
