--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<div class="container">
 
 							<header>
-								<h2>storyline examples</h2>
+								<h2>Storyline Examples</h2>
 							</header>
 
 
