--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<div id="main">
 
 				<!-- Introduction -->
-					<section id="top" class="one light cover">
+					<section id="top" class="one dark cover">
 						<div class="container">
 
 							<header>
