--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Introduction</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Home</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Examples</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								
 							</ul>
@@ -143,11 +143,10 @@
 							</header>
 
 							<p>
-								Education: BA in learning technologies. Experience in Learning Development and organizational learning.
+								Education: BA in learning technologies.</br> Experience in Learning Development and organizational learning.
 								broad creative vision and ambition.
 							</p>
 
-							<p>my goal is : designing a winning and engaging learning units. </p>
 							<p>
 								Extensive experience in writing content and tutorials, preparing presentations,</br> 
 								experience in developing online training (eLearning).
