--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-		
+
 		<!-- Header -->
 			<div id="header">
 
@@ -41,7 +41,8 @@
 						<ul class="icons">
 							
 							<li><a href="https://github.com/lior-maman" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="mailto:mlior@ourlook.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.instagram.com/lior.mman" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="mailto:liormman@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -84,12 +85,9 @@
 								<h2>Storyline Examples</h2>
 							</header>
 
-
 							<strong>
 								<p> my work at a quick glance,
-								based on Articulate Storyline. <br />
-							</p>
-
+								based on Articulate Storyline. <br /> </p>
 							</strong>
 
 							<div class="row">
@@ -142,22 +140,23 @@
 								<h2>About Me</h2>
 							</header>
 
-							<p>
+							<strong>
 								Education: BA in learning technologies.</br> Experience in Learning Development and organizational learning.
 								broad creative vision and ambition.
-							</p>
+							</strong>
 
 							<p>
 								Extensive experience in writing content and tutorials, preparing presentations,</br> 
 								experience in developing online training (eLearning).
 							</p>
+
 							<br>
-							<a href="mailto:mlior@ourlook.com">mlior@outlook.com</a> 
+							<a href="mailto:liormman@gmail.com">LIORMMAN@GMAIL.COM</a> 
 							<br>
 						</br>
 
 						</div>
-						<a href="#" class="image featured"><img src="images/about-me.jpg" alt="" /></a>
+						<a href="#about" class="image featured"><img src="images/about-me.jpg" alt="" /></a>
 
 					</section>
 
@@ -169,7 +168,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Lior Maman. All rights reserved.</li>
+						<li>&copy; Lior Maman. 2020 All rights reserved.</li>
 					</ul>
 
 			</div>
