--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						</strong>
 							<p>
 								<blockquote>
-									Extensive experience in writing content and tutorials, preparing presentations,</br> 
+									Extensive experience in writing content and tutorials, preparing presentations</br> 
 									and developing online training (eLearning).
 
 								</blockquote>
