--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt"><strong><a href="#portfolio">Welcome to my Portfolio. </a> </strong>
+								<h2 class="alt"><strong><a href="#portfolio" id="portfolio-link">Welcome to my Portfolio. </a> </strong>
 
 									<br />
 
