--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								<div class="col-4 col-12-mobile">
 
 									<article class="item">
-										<a href="storyline\Drag-andDrop/story_html5.html" class="image fit"><img src="images/d-drop.png" alt="Drag and drop E-Learning" /></a>
+										<a href="storyline\Drag-andDrop/story_html5.html" class="image fit"><img src="images/d-drop.png" alt="Drag and drop Example" /></a>
 										<header>
 											<h3>Drag and drop Example</h3>
 										</header>
