--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 									<article class="item">
 										<a href="storyline/OsemExample/story.html" class="image fit"><img src="images/osem.png" alt="" /></a>
 										<header>
-											<h3>osem nestle (israel) Example</h3>
+											<h3>Osem-Nestle Example</h3>
 										</header>
 									</article>
 									
