--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 
-																								<!-- <article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<article class="item">
+										<a href="storyline/QuizExample/story_html5.html" class="image fit"><img src="images/quiz.png" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Quick Quiz Example</h3>
 										</header>
-									</article> -->
+									</article>
 
 					
 								</div>
