--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 									</article>
 
 									<article class="item">
-										<a href="images/tarshim2.png" class="image fit"><img src="images/tarshim2.png" alt="Guide by screen shots" /></a>
+										<a href="/ppt/ppt2.ppt" class="image fit"><img src="images/ppt2.png" alt="Intro Presentation" /></a>
 										<header>
 											<h3>
-												Game Design
+												Presentation Design
 											</h3>
 										</header>
 
-										<a href="images/tarshim2.png" class="image fit">Editor Rectangular Diagram</a>
+										<a href="ppt/ppt2.ppt" class="image fit">Call center Info</a>
 
 									</article>
 
@@ -154,19 +154,19 @@
 											<h3>Simple Quizon</h3>
 										</header>
 
-										<a href="images/tarshim.png" class="image fit">Quiz Interations</a>
+										<a href="images/quiz.png" class="image fit">Quiz Interations</a>
 
 									</article>
 
 									<article class="item">
-										<a href="images/tarshim.png" class="image fit"><img src="images/tarshim.png" alt="Guide by screen shots" /></a>
+										<a href="ppt/ppt1.ppt" class="image fit"><img src="images/ppt1.png" alt="Guide by screen shots" /></a>
 										<header>
 											<h3>
-												Game Design
+												Presentation Design
 											</h3>
 										</header>
 
-										<a href="images/tarshim.png" class="image fit">User Rectangular Diagram</a>
+										<a href="/ppt/ppt1.ppt" class="image fit">Rent Introduction</a>
 
 
 									</article>
