--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										<a href="images/guide-example.png" class="image fit"><img src="images/guide-example.png" alt="MS Word Guide" /></a>
 										<header>
 											<h3>
-												Guide Example
+												User Manual
 											</h3>
 										</header>
 
