--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
 								<div class="col-4 col-12-mobile">
 
 									<article class="item">
-										<a href="storyline\Drag-andDrop/story_html5.html" class="image fit"><img src="images/d-drop.png" alt="Drag and drop Example" /></a>
+										<a href="/ppt/ppt3.pptx" class="image fit"><img src="images/ppt3.png" alt="Optimization" /></a>
 										<header>
-											<h3>Simple Drag and Drop</h3>
+											<h3>Optimization Offer</h3>
 										</header>
 
-										<a href="storyline\Drag-andDrop/story_html5.html" class="image fit">Drag n' Drop</a>
+										<a href="/ppt/ppt3.pptx" class="image fit">PPT Offer</a>
 
 									</article>
 
