--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 						<div class="container">
 
 							<header>
-								<h2>Storyline Examples</h2>
+								<h2>PowerPoint and Storyline Examples</h2>
 							</header>
 
 							<strong>
-								<p> Storyline eLearning at a quick glance
+								<p> eLearning at a quick glance
 								 <br /> </p>
 							</strong>
 
