--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<div class="container">
 
 							<header>
-								<h2>PowerPoint and Storyline Examples</h2>
+								<h2>eLearning Examples </h2>
 							</header>
 
 							<strong>
