--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Lior Maman</h1>
-							<p>E-Learning Developer</p>
+							<p>eLearning development</p>
 						</div>
 
 					<!-- Nav -->
