--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Lior Maman</h1>
+							<h1 id="title">Maman Lior</h1>
 							<p>eLearning development</p>
 						</div>
 
