--- a/index.html
+++ b/index.html
@@ -187,19 +187,15 @@
 								<h2>About Me</h2>
 							</header>
 
-							<blockquote>
-
-								broad creative vision and ambition.
-
-								</blockquote>
 
 							<strong>
 								Education: BA in learning technologies. Holon Institute of Technology.
 
 							</strong>
+						</br>
 
 							<strong>
-								Experience: in eLearning development and organizational learning.
+								Experience in eLearning development and organizational learning.
 
 							</strong>
 
