--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 											</h3>
 										</header>
 
-										<a href="doc/TrainingDoc.docx" class="image fit">MS Word Guide</a>
+										<a href="doc/TrainingDoc.pdf" class="image fit">MS Word Guide</a>
 
 
 									</article>
