--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
 									<article class="item">
-										<a href="images/guide-example.png" class="image fit"><img src="images/guide-example.png" alt="MS Word Guide" /></a>
+										<a href="images/guide-example.png" class="image fit"><img src="images/guide-example.png" alt="Download PDF" /></a>
 										<header>
 											<h3>
 												User Manual
