--- a/index.html
+++ b/index.html
@@ -217,10 +217,9 @@
 					</br>
 
 							<br>
-
-							<a href="https://paypal.me/mlior">paypal</a>
-
 							
+							
+							<!-- <a href="https://paypal.me/mlior">paypal</a> -->
 
 
 						</br>
