--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
 										<a href="ppt/ppt1.ppt" class="image fit"><img src="images/ppt1.png" alt="Guide by screen shots" /></a>
 										<header>
 											<h3>
-												Presentation Design
+												Poster Design
 											</h3>
 										</header>
 
-										<a href="/ppt/ppt1.ppt" class="image fit">Rent Introduction</a>
+										<a href="/ppt/ppt1.ppt" class="image fit">CoP Poster Design</a>
 
 
 									</article>
