--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 										<a href="ppt/ppt1.ppt" class="image fit"><img src="images/ppt1.png" alt="Guide by screen shots" /></a>
 										<header>
 											<h3>
-												Poster Design
+												Poster Design.
 											</h3>
 										</header>
 
