--- a/index.html
+++ b/index.html
@@ -124,13 +124,12 @@
 										<a href="doc/TrainingDoc.pdf" class="image fit"><img src="images/guide-example.png" alt="Download PDF" /></a>
 										<header>
 											<h3>
-												User Manual
+												English User Manual
 											</h3>
 										</header>
 
 										<a href="doc/TrainingDoc.pdf" class="image fit">MS Word Guide</a>
 									</article>
-
 
 
 									<article class="item">
