--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								
 								<br>
 								<p>
-									e-Learning development and Design
+									<strong> e-Learning development and Design </strong>
 
 								</p>
 
